[MyBatis] 설정 및 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.application.name=cafeboard
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=your_password
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comment=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/cafeboard
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
+
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+
+logging.level.cafeboard.post.PostMapper=DEBUG
